---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ??????
  Features:
    - Add Smaller Request Proxy image.
    - Add Show Bots on map option.
    - Add woodless recipes option.
    - Add fireproof rolling stock option.
    - Add legacy belt fast replace option.
    - Add artillery map reveal option.
    - Add free circuit wires option.
  Removal:
    - Better Color Lamps (PickerSignals).
    - More Virtual Signals (PickerSignals).
    - Entities for Notes (PickerNotes).
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ??????
  Features:
    - Added EnhancedFlashlight.
  Bugfixes:
    - Fixed brighter lights.
    - Fixed alert icon size.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Prototype Tweaks.
    - Custom tile stack sizes.
    - Better color lamps.
    - More virtual signal icons.
    - Iondicators.
    - Smokeless.
    - Generic Vehicle Grids.
    - Squeak Through.
    - Remove decorations.
    - Small Fixes.
    - Entities for Picker Notes.
    - Picker Reacher (adjust prototype reach distances).