@@ -14,3 +14,4 @@ require 'prototypes/ui-tweaks'
 require 'prototypes/weapon-tweaks'
 require 'prototypes/wire-tweaks'
 require 'prototypes/wood-tweaks'
+require 'prototypes/entity-tweaks'
