@@ -44,6 +44,7 @@ picker-legacy-belt-fast-replace=Legacy Belt Fast Replace
 picker-fireproof-rolling-stock=Fireproof Trains
 picker-show-bots-on-map=Show Bots on Map
 picker-clean-tree-burning=No burned Trees
+picker-realistic-reactor-glow=Realistic Reactor Glow
 
 [mod-setting-description]
 picker-unminable-construction-robots=Make it impossible to pluck construction robots out of the air.\nFactorio default: false
@@ -85,6 +86,7 @@ picker-legacy-belt-fast-replace=Splitters and Undergrounds no longer fast replac
 picker-fireproof-rolling-stock=Train rolling stock is fireproof.
 picker-show-bots-on-map=Show Construction and Logistic bots on the map.
 picker-clean-tree-burning=Burned trees are not a problem.
+picker-realistic-reactor-glow=Realistic reactor glow.
 
 [picker-extra-settings-info]
 merge=__1____2__
